<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="60dp">

    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/agroinfo"
        android:textSize="15sp"
        android:textStyle="bold"
        android:fontFamily="@font/comfortaa_regular" />

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_text"
        android:textSize="40sp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/comfortaa_bold" />


    <EditText
        android:id="@+id/regUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:hint="@string/hint_regUsername"
        android:inputType="text" />

    <EditText
        android:id="@+id/regEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:hint="@string/hint_regEmail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/regPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/RegPasswordRetype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:hint="@string/hint_retype_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:height="60dp"
        android:backgroundTint="@color/black"
        android:text="@string/btnRegister"
        app:cornerRadius="5dp" />

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:focusable="true"
        android:text="@string/txtLogin"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:gravity="center"
        android:clickable="true" />

</LinearLayout>