<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="60dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/back_button"
            android:padding="10dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/logo"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_regular"
            android:gravity="end"
            android:text="@string/agroinfo"
            android:textSize="15sp"
            android:textStyle="bold"
            android:padding="20dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/txtHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/title"
        android:textSize="20sp"
        android:layout_marginHorizontal="20dp"
        android:paddingTop="20dp"/>

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="match_parent"
        android:layout_height="448dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/detail_description"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_login"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/black"
        android:text="@string/wiki"
        android:textColor="@android:color/white"
        app:cornerRadius="10dp" />

</LinearLayout>
