<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="60dp">

    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/agroinfo"
        android:textSize="15sp"
        android:textStyle="bold"
        android:fontFamily="@font/comfortaa_regular" />

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtSearch"
        android:textSize="30sp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/comfortaa_light" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/search_bar_bkgrd"
        app:queryHint="Search here"
        app:iconifiedByDefault="false"/>

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btn_login"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="131dp"
        android:layout_height="58dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/black"
        android:text="@string/see_more"
        android:textColor="@android:color/white"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        app:cornerRadius="10dp" />

</LinearLayout>
